css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  margin: 0;
  padding: 0;
  box-sizing: border-box;

  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
}

@media only screen and (min-width: 60em) {
    
    html {
        font-size: 110%;
    }
        
    .masthead {
        text-align: left;
    }
    
    .nav-footer {
        text-align: right;
    }
    
    .form-spacing {
        padding: 0 10em 0 10em;
    }
}

@media only screen and (min-width: 90em) {
    
    html {
        font-size: 120%;
    }
}

@media only screen and (min-width: 120em) {
    
    html {
        font-size: 130%;
    }
}

*, *:before, *:after {
  box-sizing: inherit;
}


body {
  margin: 0;
  padding: 0;
}

a:link,
a:active {
    outline: none;
}

a:focus {
    outline: 3px solid #000;
}

.skip-links {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.skip-links a {
    position: absolute;
    top: -3em;
    padding: 0.5em 0.75em;
    background-color: #000;
    color: #fff;
    font-weight: bold;
    font-size: 1.25rem;
    text-decoration: none;
}

.skip-links a:focus {
    top: 0;
}

.img-flex {
  display: block;
  width: 100%;
}

.masthead {
  background-color: #edecec;
  overflow: hidden;
}

.title {
    text-align: center;
    margin: 0;
}

.nav {
    margin: 0;
    padding: 1em 0;
    list-style-type: none;
    background-color: #edecec;
}

.nav li {
    border-top: 0;
}

.nav a,
.nav a:link,
.nav a:visited {
  display: block;

  color: #000;
  text-decoration: none;
}

.nav a:hover,
.nav a:focus,
.nav a:active,
.nav .nav-current,
.nav .nav-current:visited {
  background-color: #e94647;

  color: #fff;
}

.intro {
    background-color: #e2e2e2;
    text-align: center;
    font-weight: normal;
}

.index-image-background {
  background-color: #efefef;
  overflow: hidden;
}

.para1 {
    background-color: #e4e5e6;
}

.para2 {
    background-color: #d1d1d2;
}

.forms {
    background-color: #c1c0c0;
}

.center {
    text-align: center;
}

label {
    display: block;
}

input + label {
    display: inline-block;
}

button {
    font-size: 1.5em;
    font-family: sans-serif;
    border: none;
    background: #e94647;
    color: #fff;
    padding: 0 0.3em;
    cursor: pointer;
    margin: 1em;
}

.input-boxes {
    width: 100%;
    height: 3em;
    border: 1px solid #000;
}

textarea {
    width: 100%;
    height: 18em;
    border: none;
}

.billboard {
    background-image: url(../images/speaker.jpeg);
    overflow: hidden;
    background-size: 70rem;
    padding: 18rem 5%;
    background-position: center;
    position: relative;
}

.billboard-title {
    color: #e94647;
    background-color:rgba(255, 255, 255, .5);
    padding: 1.25rem 5%;
}

.playlist {
    width: 5em;
}

.radio {
    width: 5em;
}

.music {
    width: 5em;
}

.text-align {
    text-align: center;
}

.logo {
    width: 7rem;
    margin: .25rem 1%;
    display: block;
}

.guitar {
    width: 100%
}

@media only screen and (min-width: 25em) {
    
    .nav {
        text-align: center;
    }

    .nav li {
        display: inline-block;
    }
    
    .masthead {
        text-align: center;
    }
    
    .billboard {
        
}

@media only screen and (min-width: 38em) {
    
  .title,
  .nav {
    text-align: left;
   }
    
    .masthead {
        text-align: left;
    }
    
    .nav-footer {
        text-align: right;
} 
}

